--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,13 +3,14 @@ GameName=PuzzlePlatform
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
-GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
+GameDefaultMap=/Game/Maps/Lobby.Lobby
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GlobalDefaultGameMode=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode_C
 GlobalDefaultServerGameMode=None
+GameInstanceClass=/Script/PuzzlePlatform.PuzzlePlatformsGameInstance
 
 [/Script/Engine.RendererSettings]
 r.Mobile.ShadingPath=0
