--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,15 +2,16 @@
 GameName=PuzzlePlatform
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
-GameDefaultMap=/Game/Maps/Lobby.Lobby
-TransitionMap=
+EditorStartupMap=/Game/MenuSystem/MainMenu.MainMenu
+GameDefaultMap=/Game/ManuSystem/MainMenu.MainMenu
+TransitionMap=/Game/MenuSystem/MainMenu.MainMenu
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GlobalDefaultGameMode=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode_C
 GlobalDefaultServerGameMode=None
 GameInstanceClass=/Script/PuzzlePlatform.PuzzlePlatformsGameInstance
+ServerDefaultMap=/Game/MenuSystem/MainMenu.MainMenu
 
 [/Script/Engine.RendererSettings]
 r.Mobile.ShadingPath=0
