--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -213,5 +213,15 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+[/Script/Engine.GameEngine]
++NetDriverDefinitions=(DefName="GameNetDriver",DriverClassName="OnlineSubsystemSteam.SteamNetDriver",DriverClassNameFallback="OnlineSubsystemUtils.IpNetDriver")
+ 
 [OnlineSubsystem]
-DefaultPlatformService=NULL
+DefaultPlatformService=Steam
+ 
+[OnlineSubsystemSteam]
+bEnabled=true
+SteamDevAppId=480
+ 
+[/Script/OnlineSubsystemSteam.SteamNetDriver]
+NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
