--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -220,7 +220,7 @@ ManualIPAddress=
 DefaultPlatformService=Steam
  
 [OnlineSubsystemSteam]
-bEnabled=true
+bEnabled=false
 SteamDevAppId=480
  
 [/Script/OnlineSubsystemSteam.SteamNetDriver]
