GameMode And Multiplayer

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,15 +3,18 @@ GameName=PuzzlePlatform
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/MenuSystem/MainMenu.MainMenu
-GameDefaultMap=/Game/ManuSystem/MainMenu.MainMenu
+LocalMapOptions=
 TransitionMap=/Game/MenuSystem/MainMenu.MainMenu
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GlobalDefaultGameMode=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode_C
-GlobalDefaultServerGameMode=None
+FourPlayerSplitscreenLayout=Grid
+bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/PuzzlePlatform.PuzzlePlatformsGameInstance
+GameDefaultMap=/Game/MenuSystem/MainMenu.MainMenu
 ServerDefaultMap=/Game/MenuSystem/MainMenu.MainMenu
+GlobalDefaultGameMode=/Script/PuzzlePlatform.LobbyGameMode
+GlobalDefaultServerGameMode=None
 
 [/Script/Engine.RendererSettings]
 r.Mobile.ShadingPath=0
@@ -215,13 +218,14 @@ ManualIPAddress=
 
 [/Script/Engine.GameEngine]
 +NetDriverDefinitions=(DefName="GameNetDriver",DriverClassName="OnlineSubsystemSteam.SteamNetDriver",DriverClassNameFallback="OnlineSubsystemUtils.IpNetDriver")
- 
+
 [OnlineSubsystem]
 DefaultPlatformService=Steam
- 
+
 [OnlineSubsystemSteam]
 bEnabled=false
 SteamDevAppId=480
- 
+
 [/Script/OnlineSubsystemSteam.SteamNetDriver]
 NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
+
