--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,7 +4,7 @@ GameName=PuzzlePlatform
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/MenuSystem/MainMenu.MainMenu
 LocalMapOptions=
-TransitionMap=/Game/MenuSystem/MainMenu.MainMenu
+TransitionMap=/Game/Maps/Transition.Transition
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
@@ -13,7 +13,7 @@ bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/PuzzlePlatform.PuzzlePlatformsGameInstance
 GameDefaultMap=/Game/MenuSystem/MainMenu.MainMenu
 ServerDefaultMap=/Game/MenuSystem/MainMenu.MainMenu
-GlobalDefaultGameMode=/Script/PuzzlePlatform.LobbyGameMode
+GlobalDefaultGameMode=/Game/Blueprints/BP_LobbyGameMode.BP_LobbyGameMode_C
 GlobalDefaultServerGameMode=None
 
 [/Script/Engine.RendererSettings]
